# pytorch-cpp-extensions

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  README.md  custom_batch_norm.cpp  custom_batch_norm.pyi  pyproject.toml  setup.py
.github/workflows/: lint.yaml
pytorch_cpp_extensions/: __init__.py  utils.hpp  utils.py
pytorch_cpp_extensions/custom_batch_norm/: __init__.py  custom_batch_norm.py  custom_batch_norm_cpp.cpp  custom_batch_norm_cpp.pyi  custom_batch_norm_cuda.cu  custom_batch_norm_cuda.pyi
pytorch_cpp_extensions/standardize/: __init__.py  standardize.py  standardize_cpp.cpp  standardize_cpp.pyi  standardize_cuda.cu  standardize_cuda.pyi
tests/: test_custom_batch_norm.py  test_standardize.py
tests/helpers/: devices.py
tutorials/: performance_comparison.ipynb
